project/stage/tests/accept/empty_functions/w_params/multiple_params/char_func_char_float_boolean_void.ul
char f12345098_234fXx_ (char aslk_234_KD , float ____12Kkl, boolean ____12Kkl, void ____12Kkl) { }
