project/stage/tests/reject/bad_var_decl/after_print_int.ul
boolean f(int m) {
    print 1;
    void meep;
}
